import { filterNonNullishKeys } from '@mj-studio/js-util';
import { kAssert } from '@react-native-kakao/core';

import type { KakaoNaviAPI, KakaoNaviOption } from './index';

declare const Kakao: {
  Navi: {
    start: Function;
    share: Function;
  };
};

function getVehicleType(v: KakaoNaviOption['vehicleType']): number {
...
