...
          screenOptions={{
            headerShown: true,
            contentStyle: { backgroundColor: 'black' },
            headerTintColor: 'white',
            headerStyle: { backgroundColor: 'black' },
            headerTitle: (props) => (
              <Txt testID={'screen-title'} weight={'bold'}>
                {capitalize(props.children)}
              </Txt>
            ),
            animation: 'none',
          }}
        />
...
